--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,20 @@
    <!--[if lt IE 9]>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
    <![endif]-->
+   <style>
+      body, html {
+      margin: 0;
+      padding: 0;
+      }
+      
+      .wrapper {
+         margin-left: 0;
+         padding-left: 0;
+         float: left; /* Align to the left */
+         width: 100%; /* Ensure it takes up the full width if needed */
+         box-sizing: border-box; /* Include padding/border in the width */
+      }
+   </style>
 </head>
 <body>
    <div class="wrapper">
